--- a/iwf.yaml
+++ b/iwf.yaml
@@ -535,24 +535,15 @@ components:
           type: string
           enum:
             - HISTORY_EVENT_ID
-            - FIRST_DECISION_COMPLETED
-            - LAST_DECISION_COMPLETED
-            - LAST_CONTINUED_AS_NEW
-            - BAD_BINARY
-            - DECISION_COMPLETED_TIME
-            - FIRST_DECISION_SCHEDULED
-            - LAST_DECISION_SCHEDULED
-        historyEventId: #The eventID of any event after DecisionTaskStarted you want to reset to (this event is exclusive in a new run. The new run history will fork and continue from the previous eventID of this). It can be DecisionTaskCompleted, DecisionTaskFailed or others
+            - BEGINNING
+            - EVENT_TIME
+        historyEventId: #required for resetType of HISTORY_EVENT_ID. The eventID of any event after DecisionTaskStarted you want to reset to (this event is exclusive in a new run. The new run history will fork and continue from the previous eventID of this). It can be DecisionTaskCompleted, DecisionTaskFailed or others
           type: integer
         reason: #reason to do the reset for tracking purpose
           type: string
-        decision_offset: #based on the reset point calculated by resetType, this offset will move/offset the point by decision. Currently only negative number is supported, and only works with LastDecisionCompleted
-          type: integer
-        reset_bad_binary_checksum: #Binary checksum for resetType of BadBinary
+        eventTime: #Earliest time of event time, required for resetType of EVENT_TIME.Supported formats are '2006-01-02T15:04:05+07:00', raw UnixNano and time range (N<duration>), where 0 < N < 1000000 and duration (full-notation/short-notation) can be second/s, minute/m, hour/h, day/d, week/w, month/M or year/y. For example, '15minute' or '15m' implies last 15 minutes, meaning that workflow will be reset to the first decision that completed in last 15 minutes
           type: string
-        earliest_time: #EarliestTime of decision start time, required for resetType of DecisionCompletedTime.Supported formats are '2006-01-02T15:04:05+07:00', raw UnixNano and time range (N<duration>), where 0 < N < 1000000 and duration (full-notation/short-notation) can be second/s, minute/m, hour/h, day/d, week/w, month/M or year/y. For example, '15minute' or '15m' implies last 15 minutes, meaning that workflow will be reset to the first decision that completed in last 15 minutes
-          type: string
-        skip_signal_reapply: #whether or not skipping signals reapply after the reset point
+        skipSignalReapply: # whether skipping signals reapply after the reset point
           type: boolean
     WorkflowResetResponse:
       type: object
