--- a/iwf.yaml
+++ b/iwf.yaml
@@ -281,11 +281,11 @@ components:
     RetryPolicy:
       type: object
       properties:
-        initialInterval: # default to 1s
+        initialIntervalSeconds: # default to 1s
           type: integer
         backoffCoefficient: # default to 2
           type: number
-        maximumInterval: # default to 100x of initial interval
+        maximumIntervalSeconds: # default to 100x of initial interval
           type: integer
         maximumAttempts: # default to 0, means unlimited
           type: integer
