--- a/iwf.yaml
+++ b/iwf.yaml
@@ -260,21 +260,43 @@ components:
           type: string
         valueType:
           $ref: '#/components/schemas/SearchAttributeValueType'
-    SearchAttributeValueType:
+    SearchAttributeValueType: # see https://docs.temporal.io/concepts/what-is-a-search-attribute#types
       type: string
       enum:
         - KEYWORD
+        - TEXT
+        - DATETIME
         - INT
+        - DOUBLE
+        - BOOL
     SearchAttribute:
       type: object
       properties:
         key:
           type: string
-        stringValue: # for any value than can be stored as string: keyword, text, wildcard
+        stringValue: # Deprecated, use stringArrayValue instead. It's used for KEYWORD only in version <=1.0. for any value than can be stored as string: keyword, text, and DATETIME
           type: string
-        integerValue:
+        integerValue: # Deprecated, use integerArrayValue instead. It's used for INT only in version <=1.0.
           type: integer
           format: int64
+        stringArrayValue: # for any type than can be stored as string: KEYWORD, TEXT, and DATETIME
+          type: array
+          items:
+            type: string
+        integerArrayValue: # for INT type
+          type: array
+          items:
+            type: integer
+            format: int64
+        doubleArrayValue: # for DOUBLE type
+          type: array
+          items:
+            type: number
+            format: double
+        boolArrayValue: # for BOOL type
+          type: array
+          items:
+            type: boolean
         valueType:
           $ref: '#/components/schemas/SearchAttributeValueType'
     RetryPolicy:
