AnyCommandCombinationsCompleted by commandIds

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -745,12 +745,23 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/InterStateChannelCommand'
+        commandCombinations:
+          type: array
+          items:
+            $ref: '#/components/schemas/CommandCombination'
     DeciderTriggerType:
       type: string
       enum:
         - ALL_COMMAND_COMPLETED
         - ANY_COMMAND_COMPLETED
-#            - ANY_COMMAND_CLOSED
+        - ANY_COMMAND_COMBINATION_COMPLETED # this allows specifying combination using commandIds, all commandIds cannot be emptied in order to use this DeciderTriggerType
+    CommandCombination:
+      type: object
+      properties:
+        commandIds:
+          type: array
+          items:
+            type: string
     CommandResults:
       type: object
       properties:
