add stateStateSucceeded in command results

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -833,6 +833,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/TimerResult'
+        stateStartSucceeded:
+          type: boolean
 #    ActivityCommand:
 #      required:
 #        - commandId
