add stateStateSucceeded in command results (#32)
* add stateStateSucceeded in command results

* update name

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -833,6 +833,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/TimerResult'
+        stateStartApiSucceeded:
+          type: boolean
 #    ActivityCommand:
 #      required:
 #        - commandId
