--- a/iwf.yaml
+++ b/iwf.yaml
@@ -321,6 +321,11 @@ components:
           type: integer
         maximumAttempts: # default to 0, means unlimited
           type: integer
+    ErrorHandlingPolicy:
+      type: string
+      enum:
+        FAIL_WORKFLOW_ON_ERROR
+        PROCEED_TO_NEXT_STATE_ON_ERROR # next states derived from decide() API
 # TODO NOTE:
 #  1. this will need more work on server to allow customize error types for workflow results
 #  2. probably only can apply to workflow
@@ -345,6 +350,8 @@ components:
           $ref: '#/components/schemas/RetryPolicy'
         decideApiRetryPolicy:
           $ref: '#/components/schemas/RetryPolicy'
+        errorHandlingPolicy:
+          $ref: '#/components/schemas/ErrorHandlingPolicy'
     WorkflowStartOptions:
       type: object
       properties:
