--- a/iwf.yaml
+++ b/iwf.yaml
@@ -324,8 +324,8 @@ components:
     StartApiFailurePolicy:
       type: string
       enum:
-        FAIL_WORKFLOW_ON_ERROR
-        PROCEED_TO_NEXT_STATE_ON_ERROR # next states derived from decide() API
+        FAIL_WORKFLOW_ON_START_API_ERROR
+        PROCEED_TO_DECIDE_ON_START_API_ERROR # next states derived from decide() API
 # TODO NOTE:
 #  1. this will need more work on server to allow customize error types for workflow results
 #  2. probably only can apply to workflow
