fix typo in StartApiFailurePolicy

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -324,8 +324,8 @@ components:
     StartApiFailurePolicy:
       type: string
       enum:
-        FAIL_WORKFLOW_ON_START_API_FAILURE
-        PROCEED_TO_DECIDE_ON_START_API_FAILURE # next states derived from decide() API
+        - FAIL_WORKFLOW_ON_START_API_FAILURE
+        - PROCEED_TO_DECIDE_ON_START_API_FAILURE # next states derived from decide() API
 # TODO NOTE:
 #  1. this will need more work on server to allow customize error types for workflow results
 #  2. probably only can apply to workflow
