add workflow stop type of terminate and fail

--- a/iwf.yaml
+++ b/iwf.yaml
@@ -478,8 +478,8 @@ components:
       type: string
       enum:
         - CANCEL # default behavior
-        # - TERMINATE # this will hard terminate the workflow  TODO need server to support
-        # - FAIL TODO need server to support
+        - TERMINATE # this will hard terminate the workflow
+        - FAIL
     WorkflowGetDataObjectsRequest:
       type: object
       required:
