--- a/iwf.yaml
+++ b/iwf.yaml
@@ -557,6 +557,7 @@ components:
       type: string
       enum:
         - STATE_DECISION_FAILING_WORKFLOW_ERROR_TYPE
+        - CLIENT_API_FAILING_WORKFLOW_ERROR_TYPE
         - STATE_API_FAIL_MAX_OUT_RETRY_ERROR_TYPE
         - INVALID_USER_WORKFLOW_CODE_ERROR_TYPE
         - SERVER_INTERNAL_ERROR_TYPE
