--- a/iwf.yaml
+++ b/iwf.yaml
@@ -985,6 +985,8 @@ components:
           type: integer
         continueAsNewThresholdSignalsReceived:
           type: integer
+        continueAsNewPageSizeInBytes:
+          type: integer
     Context:
       type: object
       required:
